@@ -1,3 +1,7 @@
+08/07/2010
+- bugfix on assigning multidimensional arrays within templates
+- corrected bugfix for truncate modifier
+
 07/07/2010
 - bugfix the truncate modifier needs to check if the string is utf-8 encoded or not
 - bugfix support of script files relative to trusted_dir
